# libunikey

./: .gitignore  README.md  meson.build
lua5/: meson.build
src/: bindings.cpp  unikey.cpp  unikey.h
test/: main.lua
ukengine/: charset.h  convert.cpp  data.cpp  inputproc.h  mactab.h  meson.build  pattern.h  vnconv.h
